--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         constraintLayout = '1.1.2'
         retrofit = '2.4.0'
         lifecycle = '1.1.0'
+        room = '1.1.0'
         gson = '2.8.2'
         dagger = '2.16'
         glide = '4.8.0'
