--- a/database/build.gradle
+++ b/database/build.gradle
@@ -10,12 +10,8 @@ android {
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
 
-        testInstrumentationRunner "com.android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-    }
-
-    dataBinding {
-        enabled = true
     }
 
     buildTypes {
@@ -32,26 +28,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
-    implementation project(':dagger.addons')
-    api project(':database')
-    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-
-    //kotlin
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.25.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.25.3'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
-
-    //glide
-    implementation "com.github.bumptech.glide:glide:$rootProject.glide"
-    kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
-
-    //api
-    implementation "com.google.code.gson:gson:$rootProject.gson"
-    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit"
 
     //architecture components
     implementation "android.arch.lifecycle:extensions:$rootProject.lifecycle"
@@ -63,12 +46,19 @@ dependencies {
     implementation("com.google.dagger:dagger-android-support:$rootProject.dagger")
     kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger"
 
-    kapt "com.android.databinding:compiler:$rootProject.androidPluginVersion"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.25.3'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+
+    implementation("android.arch.persistence.room:runtime:$rootProject.room") {
+        exclude group: 'android.arch.core'
+    }
+    kapt "android.arch.persistence.room:compiler:$rootProject.room"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
 kotlin {
     experimental {
         coroutines "enable"
