--- a/features/favorites/src/main/AndroidManifest.xml
+++ b/features/favorites/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.vp.favorites">
 
     <application>
-        <activity android:name=".FavoriteActivity"
+        <activity
+            android:name=".FavoriteActivity"
             android:label="@string/activity_label">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
