--- a/features/list/src/main/AndroidManifest.xml
+++ b/features/list/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.vp.list">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application android:usesCleartextTraffic="true">
         <activity android:name="com.vp.list.MovieListActivity">
             <intent-filter>
