--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.21'
     ext {
         androidPluginVersion = '3.2.1'
         //sdk and tools
@@ -9,15 +10,24 @@ buildscript {
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
-        supportLibraryVersion = '1.0.0'
-        constraintLayout = '1.1.2'
+        kotlin = '1.3.21'
+        ktxVersion = '1.0.1'
+        supportLibraryVersion = '1.0.2'
+        recyclerview = '1.0.0'
+        material = '1.0.0'
+        constraintLayout = '1.1.3'
         retrofit = '2.4.0'
         lifecycle = '2.0.0'
         gson = '2.8.2'
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        roomVersion = '2.0.0'
+        archCoreTestingVersion = '2.0.0'
+        coreTestingVersion = '1.0.0'
+        mockitoVersion = '2.24.0'
+        coroutines = '1.1.1'
+
     }
 
     repositories {
