--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
-include ':app', ':features:list', ':features:favorites', ':dagger.addons', 'features:detail'
+include ':app',
+        ':moviedatabase',
+        ':dagger.addons',
+        ':features:list',
+        ':features:favorites',
+        'features:detail'
