--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -36,9 +36,10 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
+    implementation project(':databases')
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.21'
 
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
@@ -50,6 +51,9 @@ dependencies {
 
     //architecture components
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle"
+
+    //room
+    implementation "androidx.room:room-runtime:$rootProject.room"
 
     //dagger
     implementation "com.google.dagger:dagger:$rootProject.dagger"
