--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,18 @@ buildscript {
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
-        supportLibraryVersion = '1.0.0'
-        constraintLayout = '1.1.2'
+        kotlin = '1.3.40'
+        kotlinx = '1.2.1'
+        constraintLayout = '1.1.3'
+        appCompat = '1.0.2'
+        recyclerView = '1.0.0'
+        room = '2.1.0'
+        material = '1.0.0'
         retrofit = '2.4.0'
         lifecycle = '2.0.0'
         gson = '2.8.2'
         dagger = '2.16'
-        glide = '4.8.0'
+        glide = '4.9.0'
         okhttp = '3.10.0'
     }
 
@@ -37,6 +41,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+    }
+
+    configurations.all {
+        resolutionStrategy.force "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx"
     }
 }
 
