--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -23,6 +23,10 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -30,8 +34,8 @@ android {
 }
 
 dependencies {
-    implementation project(':dagger.addons')
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation project(':core')
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$rootProject.kotlin"
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
@@ -47,10 +51,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle"
 
     //support library
-    implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
-    implementation "androidx.recyclerview:recyclerview:$rootProject.supportLibraryVersion"
+    implementation "androidx.appcompat:appcompat:$rootProject.appCompat"
+    implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerView"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
-    implementation "com.google.android.material:material:$rootProject.supportLibraryVersion"
+    implementation "com.google.android.material:material:$rootProject.material"
 
     //api
     api "com.squareup.retrofit2:retrofit:$rootProject.retrofit"
@@ -59,9 +63,10 @@ dependencies {
     //test
     testImplementation "org.assertj:assertj-core:3.11.1"
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.mockito:mockito-core:2.21.0"
+    testImplementation "org.mockito:mockito-core:2.23.4"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     testImplementation "com.squareup.retrofit2:retrofit-mock:$rootProject.retrofit"
-    testImplementation 'androidx.arch.core:core-testing:2.0.0'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation 'androidx.arch.core:core-testing:2.0.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
