Adds Youbaraj solution

--- a/features/list/src/main/AndroidManifest.xml
+++ b/features/list/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:usesCleartextTraffic="true">
-        <activity android:name="com.vp.list.MovieListActivity">
+        <activity android:name="com.vp.list.MovieListActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
