--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,26 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    var = rootProject.compileSdkVersion
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     ext {
-        androidPluginVersion = '3.2.1'
+        androidPluginVersion = '3.5.0'
         //sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 21
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
+        kotlin = '1.3.10'
         supportLibraryVersion = '1.0.0'
-        constraintLayout = '1.1.2'
+        constraintLayout = '1.1.3'
         retrofit = '2.4.0'
         lifecycle = '2.0.0'
         gson = '2.8.2'
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        roomVersion = "2.1.0"
     }
 
     repositories {
@@ -25,7 +28,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$androidPluginVersion"
+        classpath "com.android.tools.build:gradle:${androidPluginVersion}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
 
         // NOTE: Do not place your application dependencies here; they belong
