--- a/dagger.addons/build.gradle
+++ b/dagger.addons/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     //support
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
 
+    //glide
+    api "com.github.bumptech.glide:glide:$rootProject.glide"
+    kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
+
     //dagger
     implementation "com.google.dagger:dagger:$rootProject.dagger"
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger"
