--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         dagger = '2.20'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        room = '2.2.0-rc01'
     }
 
     repositories {
