--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        realmVersion = '5.14.0'
     }
 
     repositories {
@@ -27,7 +28,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$androidPluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
-
+        classpath "io.realm:realm-gradle-plugin:$realmVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
