--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation project(':dagger.addons')
     implementation project(':navigation')
+    implementation project(':db')
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
