--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.50'
     ext {
-        androidPluginVersion = '3.2.1'
+        androidPluginVersion = '3.5.1'
         //sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 21
@@ -11,7 +12,7 @@ buildscript {
         //dependencies
         kotlin = '1.2.60'
         supportLibraryVersion = '1.0.0'
-        constraintLayout = '1.1.2'
+        constraintLayout = '1.1.3'
         retrofit = '2.4.0'
         lifecycle = '2.0.0'
         gson = '2.8.2'
@@ -25,8 +26,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$androidPluginVersion"
+        classpath "com.android.tools.build:gradle:${androidPluginVersion}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
