--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -18,8 +18,9 @@ android {
             minifyEnabled false
         }
         debugProguard {
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            consumerProguardFiles 'proguard-rules.pro'
         }
     }
 
@@ -30,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation project(':features:detail')
     implementation project(':dagger.addons')
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
     //glide
