--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript { 
+buildscript {
+    ext.kotlin_version = '1.3.50'
+
     ext {
         androidPluginVersion = '3.2.1'
         //sdk and tools
@@ -12,13 +14,15 @@ buildscript {
         kotlin = '1.3.41'
         supportLibraryVersion = '1.0.0'
         constraintLayout = '1.1.2'
-        retrofit = '2.4.0'
+        retrofit = '2.6.2'
         lifecycle = '2.0.0'
         gson = '2.8.2'
         dagger = '2.16'
         glide = '4.8.0'
-        okhttp = '3.10.0'
+        okhttp = '3.12.0'
         room = '2.2.0'
+        rxAndroid = '2.1.1'
+        rxKotlin = "2.3.0"
     }
 
     repositories {
@@ -31,6 +35,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
