--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -36,8 +36,9 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
+    implementation project(':data:model')
+    implementation project(':data:repository')
     implementation project(':navigation')
-    implementation project(':db')
 
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
@@ -46,11 +47,9 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
 
-    //dagger
-    implementation "com.google.dagger:dagger:$rootProject.dagger"
-    kapt "com.google.dagger:dagger-compiler:$rootProject.dagger"
-    implementation "com.google.dagger:dagger-android:$rootProject.dagger"
+    // DAGGER
     implementation("com.google.dagger:dagger-android-support:$rootProject.dagger")
+    kapt "com.google.dagger:dagger-compiler:$rootProject.dagger"
     kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger"
 
     //architecture components
@@ -60,14 +59,8 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$rootProject.supportLibraryVersion"
     implementation "com.google.android.material:material:$rootProject.supportLibraryVersion"
 
-    //api
-    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit"
-    implementation "com.google.code.gson:gson:$rootProject.gson"
-
-    //room
-    implementation "androidx.room:room-runtime:$rootProject.room"
-    kapt "androidx.room:room-compiler:$rootProject.room"
-    implementation "androidx.room:room-ktx:$rootProject.room"
+    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroid"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rootProject.rxKotlin"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
