--- a/data/repository/build.gradle
+++ b/data/repository/build.gradle
@@ -1,33 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-
-android {
-    compileSdkVersion rootProject.compileSdkVersion
-
-    defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
-        testInstrumentationRunner "com.android.support.test.runner.AndroidJUnitRunner"
-
-    }
-
-    buildTypes {
-        debug {
-            minifyEnabled false
-        }
-        debugProguard {
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            minifyEnabled true
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-}
+apply from: '../../android_commons.gradle'
 
 dependencies {
     implementation project(":data:model")
