--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation project(':domain')
     implementation project(':dagger.addons')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlin"
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$rootProject.kotlin"
 
     //dagger
     implementation "com.google.dagger:dagger:$rootProject.dagger"
@@ -39,10 +39,11 @@ dependencies {
     implementation("com.google.dagger:dagger-android-support:$rootProject.dagger")
     kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger"
 
-    //architecture components
-    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle"
-
     //persistence
     implementation "androidx.room:room-runtime:$rootProject.room"
+    implementation "androidx.room:room-rxjava2:$rootProject.room"
     kapt "androidx.room:room-compiler:$rootProject.room"
+
+    //rx
+    implementation "io.reactivex.rxjava2:rxkotlin:$rx"
 }
