--- a/abstraction/build.gradle
+++ b/abstraction/build.gradle
@@ -28,6 +28,6 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlin"
 
-    //architecture components
-    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle"
+    //rx
+    implementation "io.reactivex.rxjava2:rxkotlin:$rx"
 }
