--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
 
     ext {
-        androidPluginVersion = '3.2.1'
+        androidPluginVersion = '3.5.0'
         //sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 21
@@ -12,16 +12,17 @@ buildscript {
         //dependencies
         kotlin = '1.3.50'
         supportLibraryVersion = '1.1.0'
-        constraintLayout = '1.1.2'
+        constraintLayout = '1.1.3'
         recyclerView = '1.0.0'
         material = '1.0.0'
         retrofit = '2.4.0'
         lifecycle = '2.1.0'
         gson = '2.8.2'
         dagger = '2.16'
-        glide = '4.8.0'
+        daggerAndroid = '2.16'
+        glide = '4.9.0'
         okhttp = '3.10.0'
-        room = '2.1.0'
+        room = '2.2.0'
         rx = '2.2.0'
     }
 
