--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -39,14 +39,12 @@ dependencies {
     //dagger
     implementation "com.google.dagger:dagger:$rootProject.dagger"
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger"
-    implementation "com.google.dagger:dagger-android:$rootProject.dagger"
+    implementation "com.google.dagger:dagger-android:$rootProject.daggerAndroid"
     implementation("com.google.dagger:dagger-android-support:$rootProject.dagger")
     kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger"
 
     //architecture components
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycle"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycle"
 
     //support library
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
