Implemented favourite functionality in details view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation project(':dagger.addons')
     implementation project(':persistence')
     implementation project(':domain')
+    implementation project(':abstraction')
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlin"
@@ -63,6 +64,11 @@ dependencies {
     //api
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofit"
+
+    //persistence
+    implementation "androidx.room:room-runtime:$rootProject.room"
+    implementation "androidx.room:room-rxjava2:$rootProject.room"
+    kapt "androidx.room:room-compiler:$rootProject.room"
 
     //test
     testImplementation 'junit:junit:4.12'
