--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation "com.squareup.retrofit2:retrofit-mock:$rootProject.retrofit"
+    testImplementation 'androidx.arch.core:core-testing:2.0.0'
+
 }
