--- a/features/favorites/build.gradle
+++ b/features/favorites/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion rootProject.compileSdkVersion
 
@@ -24,12 +29,41 @@ android {
 }
 
 dependencies {
+
+    def lifecycleVersion = '2.0.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation('androidx.constraintlayout:constraintlayout:1.1.2')
+    implementation "androidx.navigation:navigation-fragment-ktx:$lifecycleVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$lifecycleVersion"
 
-    //support
+    //AndroidX
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
+    implementation('androidx.constraintlayout:constraintlayout:1.1.2')
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    //Architecture Component
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:$rootProject.lifecycle"
+
+    //Dagger
+    implementation "com.google.dagger:dagger:$rootProject.dagger"
+    kapt "com.google.dagger:dagger-compiler:$rootProject.dagger"
+    implementation "com.google.dagger:dagger-android:$rootProject.dagger"
+    implementation("com.google.dagger:dagger-android-support:$rootProject.dagger")
+    kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger"
+
+    implementation project(':dagger.addons')
+
+    //RxJava
+    implementation "io.reactivex.rxjava2:rxjava:2.2.14"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //Room
+    implementation "androidx.room:room-runtime:$lifecycleVersion"
+    kapt "androidx.room:room-compiler:$lifecycleVersion"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //tests
     testImplementation 'junit:junit:4.12'
